crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__tests__dialect_v2.snap
---
source: crates/vize_canon/src/batch/virtual_project/tests.rs
expression: snapshot_text(v2_content.as_str())
---
/// <reference lib="es2022" />
/// <reference lib="dom" />
/// <reference lib="dom.iterable" />
// ============================================
// Virtual TypeScript for Vue SFC Type Checking
// Generated by vize
// ============================================

// Shared preamble hoisted to the program-wide __vize_helpers.d.ts
// ========== Module Scope (imports) ==========

// ========== Exported Types ==========
export type Props = {
  test: string
};

// ========== Setup Scope ==========
function __setup() {
  // Compiler macros (setup-scope only; signatures hoisted to the shared helpers file)
  const defineProps = __vize_defineProps;
  const defineEmits = __vize_defineEmits;
  const defineExpose = __vize_defineExpose;
  const defineModel = __vize_defineModel;
  const defineSlots = __vize_defineSlots;
  const withDefaults = __vize_withDefaults;
  const useTemplateRef = __vize_useTemplateRef;
  // Mark compiler macros as used
  void defineProps; void defineEmits; void defineExpose; void defineModel; void defineSlots; void withDefaults; void useTemplateRef;

  // User setup code

  defineProps<{
    test: string
  }>()

  // @vize-map: 1097:1143 -> 0:35

  // ========== Template Scope (inherits from setup) ==========
  ;(function __template() {
    // Vue template context (delegates to ComponentPublicInstance)
    type __Ctx = import('vue').ComponentPublicInstance;
    const __ctx = undefined as unknown as __Ctx;
    const $attrs = __ctx.$attrs;
    const $slots = __ctx.$slots;
    const $refs = __ctx.$refs;
    const $emit = __ctx.$emit;
    // Vue 2 instance members (not on Vue 3 ComponentPublicInstance)
    const $listeners = undefined as any;
    const $children = undefined as any;
    const $scopedSlots = undefined as any;
    const $on = undefined as any;
    const $off = undefined as any;
    const $once = undefined as any;
    const $set = undefined as any;
    const $delete = undefined as any;
    const $createElement = undefined as any;
    const _c = undefined as any;
    void __ctx; void $attrs; void $slots; void $refs; void $emit;
    void $listeners;void $children;void $scopedSlots;void $on;void $off;void $once;void $set;void $delete;void $createElement;void _c;

  // Props are available in template as variables
  // Access via `propName` or `props.propName`
  const props: Props = {} as Props;
  void props; // Mark as used to avoid TS6133
  const test = props["test"];
  void test;

  void (test); // Interpolation
  // @vize-map: expr -> 91:95

  // Reference setup bindings (used in template/CSS v-bind)
  void test;
  })();
}

// Invoke setup to verify types
__setup();

export type Emits = {};
export type Slots = {};

// ========== Default Export ==========
type __VizeComponentInstance = {
  $props: Props;
  $emit: __EmitFn<Emits>;
  $slots: Slots;
};
declare const __vize_component__: new (...args: any[]) => __VizeComponentInstance;
export default __vize_component__;
