crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__tests__jsx_typecheck_on_reemits_style_block_interpolation.snap
---
source: crates/vize_canon/src/batch/virtual_project/tests.rs
expression: virtual_file.content.as_str()
---
declare function __vize_jsx_expr__(...args: unknown[]): any;
type __EmitShape<T> = T extends (...args: any[]) => any ? T : T extends Record<string, any> ? { [K in keyof T]: T[K] extends (...args: infer A) => any ? A : T[K] extends any[] ? T[K] : any[]; } : Record<string, any[]>;
type __EmitArgs<T, K extends keyof T> = T[K] extends any[] ? T[K] : any[];
type __EmitFn<T, __S = __EmitShape<T>, __K extends keyof __S & string = keyof __S & string, __U = { [K in __K]: (event: K, ...args: __EmitArgs<__S, K>) => void }[__K]> = __S extends (...args: any[]) => any ? __S : [__K] extends [never] ? (event: never, ...args: any[]) => void : (__U extends unknown ? (fn: __U) => void : never) extends (fn: infer __I) => void ? __I : never;
type Ctx<Emits = {}, Slots = {}> = { emit: __EmitFn<Emits>; slots: Slots; attrs: Record<string, unknown>; };
const Comp = (props: { color: string }) => (
  __vize_jsx_expr__(props.color)
);
