crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__tests__materialize_auto_imports.snap
---
source: crates/vize_canon/src/batch/virtual_project/tests.rs
expression: "fs::read_to_string(&auto_imports_path).unwrap().as_str()"
---
// @ts-nocheck
// Framework-provided globals for the virtual project.
declare function autoGenerated(): string;
